--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   background-color: rgba($white, 0.15);
+  z-index: 1;
   a {
     width: auto;
     height: 100%;
