--- a/src/scss/global/_common.scss
+++ b/src/scss/global/_common.scss
@@ -2,7 +2,30 @@ html,
 body {
   margin: 0;
   padding: 0;
-  p {
-    color: $colorText;
+}
+
+.title {
+  text-align: center;
+  font-size: calculateRem(32);
+  // font-family: "Monserrat-semibold";
+  span {
+    position: relative;
+    display: inline-block;
+    margin: 0 auto;
+    &::before {
+      position: absolute;
+      content: "";
+      bottom: -8px;
+      width: 60%;
+      height: 3px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: $primary;
+    }
   }
+}
+
+h3 {
+  text-align: center;
+  padding-top: 33px;
 }
