--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -3,6 +3,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 100%;
+  height: 40vh;
+  background: url("./../assets/images/william-iven-SpVHcbuKi6E-unsplash.jpg")
+    no-repeat 50% 50%;
+  background-size: cover;
 
   .banner-text {
     margin-top: calculateRem(35);
