--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -3,9 +3,8 @@
   height: calculateRem(80);
   display: flex;
   justify-content: center;
-  background-color: rgba($white, 0.15);
+  background-color: $white;
   box-shadow: 0px 5px 20px 0px rgba($grey, 0.42);
-  z-index: 1;
   a {
     width: auto;
     height: 100%;
