Import : cv component

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import "./components/navbar";
 @import "./components/banner";
 @import "./components/skills";
+@import "./components/cv";
 
 @font-face {
   font-family: Monserrat-italic;
