--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -1,7 +1,7 @@
 $white: #f8f8f8;
 $grey: rgb(181, 181, 181);
 $primary: #c74db2;
-$secondary: #be4dff;
+$secondary: #e8c1ff;
 $colorText: #141414;
 
 $urlMonserratItalic: "./../assets/fonts/Montserrat-Italic.ttf";
