Font-face : Montserrat extrabold

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,3 +18,8 @@
   font-family: Monserrat-semibold;
   src: url(./../assets/fonts/Montserrat-SemiBold.ttf) format("ttf");
 }
+
+@font-face {
+  font-family: Monserrat-extrabold;
+  src: url(./../assets/fonts/Montserrat-ExtraBold.ttf) format("ttf");
+}
