Font-face + import  mixins

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,21 @@
+@font-face {
+  font-family: "Monserrat-italic";
+  src: url(./../assets/fonts/Montserrat-Italic.ttf) format("ttf");
+}
+
+@font-face {
+  font-family: "Monserrat-semibold";
+  src: url(./../assets/fonts/Montserrat-SemiBold.ttf) format("ttf");
+}
+
+@font-face {
+  font-family: "Monserrat-extrabold";
+  src: url(./../assets/fonts/Montserrat-ExtraBold.ttf) format("ttf");
+}
+
 @import "./helpers/variables";
 @import "./helpers/functions";
+@import "./helpers/mixins";
 
 @import "./../../node_modules/bootstrap/scss/bootstrap.scss";
 
@@ -9,17 +25,3 @@
 @import "./components/banner";
 @import "./components/skills";
 
-@font-face {
-  font-family: Monserrat-italic;
-  src: url(./../assets/fonts/Montserrat-Italic.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: Monserrat-semibold;
-  src: url(./../assets/fonts/Montserrat-SemiBold.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: Monserrat-extrabold;
-  src: url(./../assets/fonts/Montserrat-ExtraBold.ttf) format("ttf");
-}
