The italic font style for h1

--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -38,6 +38,7 @@
       margin: 0;
       padding: calculateRem(20) calculateRem(20);
       font-family: Monserrat-italic;
+      font-style: italic;
       font-size: calculateRem(18);
       line-height: 22px;
       text-align: left;
