--- a/src/scss/components/_skills.scss
+++ b/src/scss/components/_skills.scss
@@ -1,11 +1,80 @@
-.skills {
-  background-color: $secondary;
+.knowledge {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
 
-  .knowledge {
+  .good-knowledge,
+  .col-average-knowledge,
+  .basic-knowledge {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: calculateRem(24);
+  }
+
+  .html,
+  .css,
+  .scss,
+  .js,
+  .react,
+  .bootstrap,
+  .git,
+  .github,
+  .angular,
+  .redux,
+  .adobexd,
+  .php,
+  .phpmyadmin,
+  .typescript,
+  .wordpress,
+  .parcel,
+  .webpack,
+  .balsamiq,
+  .mysql,
+  .python,
+  .batch,
+  .figma {
+    margin-bottom: calculateRem(10);
+    display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 8px;
+    p {
+      margin: 0;
+      padding: calculateRem(10) calculateRem(23);
+      color: $white;
+    }
+  }
+
+  .good-knowledge {
+    @include classWithBgColor(html, $colorHTML);
+    @include classWithBgColor(css, $colorCSS);
+    @include classWithBgColor(scss, $colorSCSS);
+    @include classWithBgColor(js, $colorJS);
+    @include classWithBgColor(react, $colorREACT);
+  }
+
+  .average-knowledge {
+    @include classWithBgColor(bootstrap, $colorBootstrap);
+    @include classWithBgColor(git, $colorGit);
+    @include classWithBgColor(github, $colorGitHub);
+    @include classWithBgColor(angular, $colorAngular);
+    @include classWithBgColor(redux, $colorRedux);
+    @include classWithBgColor(adobexd, $colorAdobeXD);
+    @include classWithBgColor(php, $colorPHP);
+    @include classWithBgColor(phpmyadmin, $colorPhpMyAdmin);
+  }
+
+  .basic-knowledge {
+    @include classWithBgColor(typescript, $colorTypeScript);
+    @include classWithBgColor(wordpress, $colorWordPress);
+    @include classWithBgColor(parcel, $colorParcel);
+    @include classWithBgColor(webpack, $colorWebpack);
+    @include classWithBgColor(balsamiq, $colorBalsamiq);
+    @include classWithBgColor(mysql, $colorMySQL);
+    @include classWithBgColor(python, $colorPython);
+    @include classWithBgColor(batch, $colorBatch);
+    @include classWithBgColor(figma, $colorFigma);
   }
 }
