The skills colors added

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -4,5 +4,27 @@ $primary: #c74db2;
 $secondary: #e8c1ff;
 $colorText: #141414;
 
-$urlMonserratItalic: "./../assets/fonts/Montserrat-Italic.ttf";
-$urlMontserratSemiBold: "./../assets/fonts/Montserrat-SemiBold.ttf";
+$colorHTML: #E44F26;
+$colorCSS: #1572B6;
+$colorSCSS: #CE679A;
+$colorJS: #D6BA31;
+$colorREACT: #18BCEE;
+
+$colorBootstrap: #7952B3;
+$colorGit: #F25135;
+$colorGitHub: #24292E;
+$colorAngular: #C3002F;
+$colorRedux: #764ABC;
+$colorAdobeXD: #470137;
+$colorPHP: #4F5B93;
+$colorPhpMyAdmin: #6C78AF;
+
+$colorTypeScript: #3178C6;
+$colorWordPress: #23282D;
+$colorParcel: #21374B;
+$colorWebpack: #2B3A42;
+$colorBalsamiq: #A60000;
+$colorMySQL: #00758F;
+$colorPython: #1F4361;
+$colorBatch: #2B2B2B;
+$colorFigma: #A259FF;
