--- a/src/scss/components/_skills.scss
+++ b/src/scss/components/_skills.scss
@@ -1,15 +1,36 @@
 .knowledge {
+  padding-bottom: calculateRem(30);
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start;
+  @include media-breakpoint-up(sm) {
+    padding-bottom: calculateRem(40);
+    .good-knowledge {
+      margin-right: calculateRem(50);
+    }
+  }
+  @include media-breakpoint-up(lg) {
+    padding-bottom: calculateRem(60);
+    justify-content: space-between;
+    .good-knowledge {
+      margin-right: 0;
+    }
+  }
 
   .good-knowledge,
+  .average-knowledge,
   .col-average-knowledge,
-  .basic-knowledge {
+  .basic-knowledge,
+  .basic-knowledge-col {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .good-knowledge,
+  .average-knowledge,
+  .basic-knowledge {
     margin-bottom: calculateRem(24);
   }
 
