The skills colors + dark grey added

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -1,30 +1,31 @@
 $white: #f8f8f8;
 $grey: rgb(181, 181, 181);
+$greyDark: #707070;
 $primary: #c74db2;
 $secondary: #e8c1ff;
 $colorText: #141414;
 
-$colorHTML: #E44F26;
-$colorCSS: #1572B6;
-$colorSCSS: #CE679A;
-$colorJS: #D6BA31;
-$colorREACT: #18BCEE;
+$colorHTML: #e44f26;
+$colorCSS: #1572b6;
+$colorSCSS: #ce679a;
+$colorJS: #d6ba31;
+$colorREACT: #18bcee;
 
-$colorBootstrap: #7952B3;
-$colorGit: #F25135;
-$colorGitHub: #24292E;
-$colorAngular: #C3002F;
-$colorRedux: #764ABC;
+$colorBootstrap: #7952b3;
+$colorGit: #f25135;
+$colorGitHub: #24292e;
+$colorAngular: #c3002f;
+$colorRedux: #764abc;
 $colorAdobeXD: #470137;
-$colorPHP: #4F5B93;
-$colorPhpMyAdmin: #6C78AF;
+$colorPHP: #4f5b93;
+$colorPhpMyAdmin: #6c78af;
 
-$colorTypeScript: #3178C6;
-$colorWordPress: #23282D;
-$colorParcel: #21374B;
-$colorWebpack: #2B3A42;
-$colorBalsamiq: #A60000;
-$colorMySQL: #00758F;
-$colorPython: #1F4361;
-$colorBatch: #2B2B2B;
-$colorFigma: #A259FF;
+$colorTypeScript: #3178c6;
+$colorWordPress: #23282d;
+$colorParcel: #21374b;
+$colorWebpack: #2b3a42;
+$colorBalsamiq: #a60000;
+$colorMySQL: #00758f;
+$colorPython: #1f4361;
+$colorBatch: #2b2b2b;
+$colorFigma: #a259ff;
