--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,3 +30,4 @@
 @import "./components/banner";
 @import "./components/skills";
 @import "./components/experiences";
+@import "./components/portfolio";
