--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -1,24 +1,79 @@
 .portfolio {
   column-count: 1;
-
-  a {
-    // margin-bottom: 20px;
-    position: relative;
-
-    img {
-      margin-bottom: 20px;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      // border: 3px solid $primary;
-      // border-radius: 10px;
-    }
-  }
+  column-gap: 1em;
+  padding-bottom: calculateRem(42);
 
   @include media-breakpoint-up(sm) {
     column-count: 2;
   }
   @include media-breakpoint-up(lg) {
-    column-count: 4;
+    column-count: 3;
+  }
+
+  .block-img {
+    position: relative;
+    display: inline-block;
+    margin: 0 0 1em;
+    width: 100%;
+    max-height: 200px;
+    border: 3px solid $primary;
+    border-radius: 10px;
+    overflow: hidden;
+    @include media-breakpoint-up(sm) {
+      width: 100%;
+      height: auto;
+      max-height: initial;
+    }
+
+    img {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
+    .link-img {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      text-decoration: none;
+      transition: background-color ease-in-out 0.35s;
+      span {
+        display: none;
+        transition: all ease-in-out 0.37s;
+      }
+    }
+
+    &:hover .link-img {
+      background-color: rgba($primary, 0.7);
+      span {
+        display: inline;
+        color: $colorText;
+      }
+      .title-img {
+        font-family: "Monserrat-semibold";
+        font-weight: 600;
+        font-size: calculateRem(25);
+        @include media-breakpoint-down(md) {
+          font-size: calculateRem(20);
+        }
+      }
+      .description-img {
+        padding-right: calculateRem(20);
+        padding-left: calculateRem(20);
+        font-family: "Monserrat-regular";
+        font-size: calculateRem(17);
+        @include media-breakpoint-down(md) {
+          padding-right: calculateRem(10);
+          padding-left: calculateRem(10);
+          font-size: calculateRem(15);
+        }
+      }
+    }
   }
 }
