--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,3 +31,4 @@
 @import "./components/skills";
 @import "./components/experiences";
 @import "./components/portfolio";
+@import "./components/footer";
