--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,3 +32,5 @@
 @import "./components/experiences";
 @import "./components/portfolio";
 @import "./components/footer";
+
+@import "./components/circles";
