Footer color modification

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba($primary, 0.76);
+  background-color: rgb(161, 84, 150);
   .title-footer {
     margin-bottom: 25px;
     span {
