--- a/src/scss/components/_circles.scss
+++ b/src/scss/components/_circles.scss
@@ -1,8 +1,13 @@
 .circles {
+  display: none;
   position: absolute;
   border-radius: 50%;
   background-color: $primary;
+  box-shadow: 0px 0px 10px 4px rgba(grey, 0.2);
   z-index: -1;
+  @include media-breakpoint-up(sm) {
+    display: block;
+  }
 }
 .circle-small {
   width: 70px;
@@ -15,40 +20,44 @@
 .circle-tall {
   width: 210px;
   height: 210px;
+  @include media-breakpoint-down(md) {
+    width: 180px;
+    height: 180px;
+  }
 }
 
-.cv-title {
+.cv-container {
   position: relative;
   .circle-small {
-    top: 65%;
-    right: 20%;
+    top: 5%;
+    left: 20%;
   }
 }
 
 .xp-container {
   position: relative;
   .circle-middle {
-    top: 5%;
-    left: 3%;
+    top: 40%;
+    right: 3%;
   }
   .circle-tall {
-    bottom: -13%;
-    right: 3%;
+    bottom: -70%;
+    left: 3%;
   }
 }
 
-.container-portfolio {
+.container-portfolio-footer {
   position: relative;
   .circle-tall {
-    top: -2%;
+    top: 14%;
     left: 5%;
   }
-  .circle-middle {
-    top: 50%;
-    right: 30%;
-  }
   .circle-small {
-    bottom: 10%;
+    bottom: 0;
+    right: 1%;
+  }
+  .circle-middle {
+    bottom: 5%;
     left: 5%;
   }
 }
