--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -1,6 +1,6 @@
 .portfolio {
   column-count: 1;
-  column-gap: 1em;
+  column-gap: 1.5em;
   padding-bottom: calculateRem(42);
 
   @include media-breakpoint-up(sm) {
@@ -18,6 +18,7 @@
     max-height: 200px;
     border: 3px solid $primary;
     border-radius: 10px;
+    // box-shadow: 0px 0px 6px 4px rgba(grey, 0.3);
     overflow: hidden;
     @include media-breakpoint-up(sm) {
       width: 100%;
