--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -1,25 +1,27 @@
 .portfolio {
-  column-count: 1;
-  column-gap: 1.5em;
   padding-bottom: calculateRem(42);
+  display: grid;
+  grid-template-columns: 1fr;
+  column-gap: 18px;
+  row-gap: 18px;
 
   @include media-breakpoint-up(sm) {
-    column-count: 2;
+    grid-template-columns: 1fr 1fr;
   }
   @include media-breakpoint-up(lg) {
-    column-count: 3;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
   .block-img {
     position: relative;
     display: inline-block;
-    margin: 0 0 1em;
     width: 100%;
-    max-height: 200px;
     border: 3px solid $primary;
     border-radius: 10px;
-    // box-shadow: 0px 0px 6px 4px rgba(grey, 0.3);
-    overflow: hidden;
+    box-shadow: 0px 0px 1px 0px rgba(#000, 0.3), 0px 0px 3px 0px rgba(#000, 0.3),
+      0px 0px 6px 0px rgba(#000, 0.3), 0px 0px 8px 0px rgba(#000, 0.3);
+    z-index: 3;
+
     @include media-breakpoint-up(sm) {
       width: 100%;
       height: auto;
@@ -27,39 +29,38 @@
     }
 
     img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-    }
-    .link-img {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
       position: absolute;
+      left: 0;
+      right: 0;
       width: 100%;
       height: 100%;
-      top: 0;
-      left: 0;
-      text-decoration: none;
-      transition: background-color ease-in-out 0.35s;
-      span {
-        display: none;
-        transition: all ease-in-out 0.37s;
-      }
+      -o-object-fit: cover;
+      object-fit: cover;
+      -o-object-position: top;
+      object-position: top;
+      border-radius: 7px;
+      z-index: -1;
     }
 
-    &:hover .link-img {
-      background-color: rgba($primary, 0.7);
-      span {
-        display: inline;
-        color: $colorText;
-      }
+    .link-img {
+      display: flex;
+      position: static;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      background-color: transparent;
+      text-decoration: none;
+      opacity: 0;
+      visibility: hidden;
+      z-index: -1;
+      height: 100%;
+      transition: all ease-in-out 0.35s;
+      min-height: 150px;
+
       .title-img {
-        font-family: "Monserrat-semibold";
         font-weight: 600;
         font-size: calculateRem(25);
+        color: #f8f4f7;
         @include media-breakpoint-down(md) {
           font-size: calculateRem(20);
         }
@@ -67,13 +68,23 @@
       .description-img {
         padding-right: calculateRem(20);
         padding-left: calculateRem(20);
-        font-family: "Monserrat-regular";
-        font-size: calculateRem(17);
+        font-size: calculateRem(14);
+        color: #f8f4f7;
+        line-height: 1.2;
         @include media-breakpoint-down(md) {
           padding-right: calculateRem(10);
           padding-left: calculateRem(10);
           font-size: calculateRem(15);
         }
+      }
+    }
+
+    &:hover {
+      .link-img {
+        visibility: visible;
+        opacity: 1;
+        z-index: 1;
+        background-color: rgba($primary, 0.85);
       }
     }
   }
