--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -24,17 +24,15 @@
     margin-bottom: 32px;
     a {
       text-decoration: none;
-      color: white;
+      color: $white;
     }
   }
 
-  .icons {
-    .icon {
-      max-width: 32px;
-      max-height: 32px;
-      &:first-child {
-        margin-right: 20px;
-      }
+  .icons a {
+    color: $white;
+    transition: all ease-in-out 0.35s;
+    &:hover {
+      color: $darkWhite;
     }
   }
 }
