--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -60,7 +60,7 @@
       .title-img {
         font-weight: 600;
         font-size: calculateRem(25);
-        color: #f8f4f7;
+        color: $colorTextWhite;
         @include media-breakpoint-down(md) {
           font-size: calculateRem(20);
         }
@@ -69,7 +69,7 @@
         padding-right: calculateRem(20);
         padding-left: calculateRem(20);
         font-size: calculateRem(14);
-        color: #f8f4f7;
+        color: $colorTextWhite;
         line-height: 1.2;
         @include media-breakpoint-down(md) {
           padding-right: calculateRem(10);
@@ -84,7 +84,7 @@
         visibility: visible;
         opacity: 1;
         z-index: 1;
-        background-color: rgba($primary, 0.85);
+        background-color: rgba($primary, 0.87);
       }
     }
   }
