Dark white, dark primary and color text white added

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -1,9 +1,13 @@
 $white: #f8f8f8;
+$darkWhite: #e6c6e0;
 $grey: rgb(181, 181, 181);
 $greyDark: #707070;
 $primary: #c74db2;
+$darkPrimary: #883079;
 $secondary: #e8c1ff;
+
 $colorText: #141414;
+$colorTextWhite: #f8f4f7;
 
 $colorHTML: #e44f26;
 $colorCSS: #1572b6;
