--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -14,9 +14,12 @@
     margin-bottom: 25px;
     span {
       font-weight: 600;
-      font-size: calculateRem(20);
+      font-size: calculateRem(17);
       color: $white;
       @include titleSubAlignment($white);
+      @include media-breakpoint-up(sm) {
+        font-size: calculateRem(20);
+      }
     }
   }
 
