--- a/src/scss/global/_common.scss
+++ b/src/scss/global/_common.scss
@@ -31,6 +31,18 @@ body {
 body {
   font-family: $font-family-sans-serif !important;
   font-weight: 400;
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: $secondary;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $primary;
+    border-radius: 2px;
+  }
 }
 
 .title {
