--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -25,9 +25,20 @@
 
   .email {
     margin-bottom: 32px;
+    transition: all ease-in-out 0.35s;
+    padding: 5px 15px;
     a {
       text-decoration: none;
       color: $white;
+    }
+    &:hover {
+      transform: scale(1.1);
+      background-color: $white;
+      border-radius: 8px;
+      a {
+        letter-spacing: 3px;
+        color: $primary;
+      }
     }
   }
 
