--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,7 +6,7 @@
 
 @import "./global/common";
 
-@import "./components/banner";
+@import "./components/header";
 @import "./components/skills";
 @import "./components/experiences";
 @import "./components/portfolio";
