--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,60 +1,3 @@
-// .banner {
-//   position: relative;
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   width: 100%;
-//   height: 40vh;
-//   background: url("./../assets/images/william-iven-SpVHcbuKi6E-unsplash.jpg")
-//     no-repeat 50% 50%;
-//   background-size: cover;
-//   @media screen and(min-width:425px) and (max-width: 768px) {
-//     height: 55vh;
-//   }
-//   @media screen and(min-width:768px) {
-//     height: 70vh;
-//   }
-
-//   .banner-text {
-//     margin: calculateRem(35) calculateRem(10);
-//     max-width: calculateRem(763);
-//     background-color: rgba($white, 0.55);
-//     border: 3px solid $primary;
-//     border-radius: 10px;
-//     @media screen and(min-width:375px) and (max-width: 425px) {
-//       margin: calculateRem(35) calculateRem(20);
-//     }
-//     @media screen and(min-width:425px) and (max-width: 768px) {
-//       margin: calculateRem(35) calculateRem(30);
-//     }
-//     @media screen and (min-width: 768px) and (max-width: 1024px) {
-//       margin: calculateRem(35) calculateRem(40);
-//     }
-//     @media screen and(min-width:1024px) {
-//       margin: 0;
-//     }
-//     h1 {
-//       margin: 0;
-//       padding: calculateRem(20) calculateRem(20);
-//       font-style: italic;
-//       font-size: calculateRem(18);
-//       line-height: 22px;
-//       text-align: left;
-//       color: $colorText;
-//       @media screen and(min-width:375px) and (max-width: 425px) {
-//         padding: calculateRem(20) calculateRem(30);
-//       }
-//       @media screen and(min-width:425px) and (max-width: 768px) {
-//         padding: calculateRem(30) calculateRem(40);
-//       }
-//       @media screen and(min-width:768px) {
-//         padding: calculateRem(56) calculateRem(66);
-//       }
-//     }
-//   }
-// }
-
 .header-banner {
   display: flex;
   align-items: center;
@@ -91,6 +34,7 @@
       svg {
         width: 60vw;
         height: auto;
+        user-select: none;
         @include media-breakpoint-up(md) {
           width: 400px;
           height: 147px;
@@ -171,7 +115,6 @@
     background: url("../assets/images/william-iven-SpVHcbuKi6E-unsplash.jpg")
       no-repeat 50% 50%;
     background-size: cover;
-    z-index: 1;
 
     @include media-breakpoint-down(lg) {
       top: 0;
