--- a/src/scss/global/_common.scss
+++ b/src/scss/global/_common.scss
@@ -44,6 +44,18 @@ body {
   }
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+span {
+  &::selection {
+    background-color: $primary;
+    color: $colorTextWhite;
+  }
+}
+
 .title {
   margin: calculateRem(46) calculateRem(28);
   text-align: center;
