Border bottom for banner image

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -110,6 +110,7 @@
     width: 100%;
     height: calc(100% + 120px);
     border-left: 3px solid $primary;
+    border-bottom: 3px solid $primary;
     border-top-left-radius: 160%;
     border-bottom-left-radius: 160%;
     background: url("../assets/images/william-iven-SpVHcbuKi6E-unsplash.jpg")
