--- a/src/scss/global/_common.scss
+++ b/src/scss/global/_common.scss
@@ -29,7 +29,7 @@ body {
 }
 
 body {
-  font-family: $font-family-sans-serif !important;
+  font-family: $font-family-sans-serif, sans-serif !important;
   font-weight: 400;
   &::-webkit-scrollbar {
     width: 9px;
