Font-family sans-serif added

--- a/src/scss/components/_experiences.scss
+++ b/src/scss/components/_experiences.scss
@@ -16,7 +16,7 @@
   }
   .city {
     margin-left: calculateRem(10); //13
-    font-family: Monserrat-italic;
+    font-family: "Monserrat-italic", sans-serif;
     font-style: italic;
     color: $greyDark;
   }
