Html color modification

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -9,7 +9,7 @@ $secondary: #e8c1ff;
 $colorText: #141414;
 $colorTextWhite: #f8f4f7;
 
-$colorHTML: #e44f26;
+$colorHTML: #bd3f1c;
 $colorCSS: #1572b6;
 $colorSCSS: #ce679a;
 $colorJS: #d6ba31;
