SCSS color modification

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -11,7 +11,7 @@ $colorTextWhite: #f8f4f7;
 
 $colorHTML: #bd3f1c;
 $colorCSS: #1572b6;
-$colorSCSS: #ce679a;
+$colorSCSS: #ce1973;
 $colorJS: #d6ba31;
 $colorREACT: #18bcee;
 
