JS color modification

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -12,7 +12,7 @@ $colorTextWhite: #f8f4f7;
 $colorHTML: #bd3f1c;
 $colorCSS: #1572b6;
 $colorSCSS: #ce1973;
-$colorJS: #d6ba31;
+$colorJS: #8a6e00;
 $colorREACT: #18bcee;
 
 $colorBootstrap: #7952b3;
