REACT color modification

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -13,7 +13,7 @@ $colorHTML: #bd3f1c;
 $colorCSS: #1572b6;
 $colorSCSS: #ce1973;
 $colorJS: #8a6e00;
-$colorREACT: #18bcee;
+$colorREACT: #0f7b9c;
 
 $colorBootstrap: #7952b3;
 $colorGit: #f25135;
