Git color modification

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -16,7 +16,7 @@ $colorJS: #8a6e00;
 $colorREACT: #0f7b9c;
 
 $colorBootstrap: #7952b3;
-$colorGit: #f25135;
+$colorGit: #ca412a;
 $colorGitHub: #24292e;
 $colorAngular: #c3002f;
 $colorRedux: #764abc;
