PhpMyAdmin color modification

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -22,7 +22,7 @@ $colorAngular: #c3002f;
 $colorRedux: #764abc;
 $colorAdobeXD: #470137;
 $colorPHP: #4f5b93;
-$colorPhpMyAdmin: #6c78af;
+$colorPhpMyAdmin: #656fa2;
 
 $colorTypeScript: #3178c6;
 $colorWordPress: #23282d;
