TypeScript color modification

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -24,7 +24,7 @@ $colorAdobeXD: #470137;
 $colorPHP: #4f5b93;
 $colorPhpMyAdmin: #656fa2;
 
-$colorTypeScript: #3178c6;
+$colorTypeScript: #2d70b9;
 $colorWordPress: #23282d;
 $colorParcel: #21374b;
 $colorWebpack: #2b3a42;
