Figma color modification

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -32,7 +32,7 @@ $colorBalsamiq: #a60000;
 $colorMySQL: #00758f;
 $colorPython: #1f4361;
 $colorBatch: #2b2b2b;
-$colorFigma: #a259ff;
+$colorFigma: #8a4bdc;
 
 // Bootstrap variables overwriting
 $font-family-sans-serif: "Montserrat";
