Establishment color modification

--- a/src/scss/components/_experiences.scss
+++ b/src/scss/components/_experiences.scss
@@ -12,7 +12,7 @@
     margin-right: calculateRem(15); //24
   }
   .establishment {
-    color: $primary;
+    color: $darkPrimary;
   }
   .city {
     margin-left: calculateRem(10); //13
