Text header color modification

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -77,6 +77,10 @@
         font-size: calculateRem(27);
         line-height: 33px;
       }
+
+      .text-header {
+        color: $colorTextHeader;
+      }
     }
 
     .icons {
