--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -6,6 +6,7 @@ $primary: #c74db2;
 $darkPrimary: #883079;
 $secondary: #e8c1ff;
 
+$colorTextHeader: #af429d;
 $colorText: #141414;
 $colorTextWhite: #f8f4f7;
 
